# wenyan-pc

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build-windows.yml  release.yml
docs/: ARCHITECTURE_REFACTOR_CHECKLIST.md  ARCHITECTURE_REFACTOR_OVERVIEW.md  ARCHITECTURE_REFACTOR_PLAN.md  AUTO_UPDATE_AND_ANALYTICS_PLAN.md  TAURI_AUTO_UPDATE_BACKGROUND_FLOW.md
src/: about.html  css_left.html  css_preview.html  desktop_style.css  editor.html  example.html  gzh.js  index.html  index.js  left.html  main.js  markdown_editor.html  markdown_preview.html  models.js  preview.html  right.html  right.js  service-worker.js  settings.html  style.css  styles.css  uploader.js  utils.js  wenyan-core.js  wenyan-styles.js
src-tauri/: .gitattributes  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/resources/: example.md
src-tauri/src/: error.rs  main.rs
src-tauri/src/application/: article_service.rs  mod.rs  update_service.rs  upload_service.rs  wechat_service.rs
src-tauri/src/commands/: article.rs  credential.rs  mod.rs  publish.rs  system.rs  theme.rs  update.rs  upload.rs  upload_cache.rs
src-tauri/src/domain/: article.rs  credential.rs  theme.rs  upload_cache.rs
src-tauri/src/dto/: article.rs  credential.rs  mod.rs  publish.rs  theme.rs  update.rs  upload.rs  upload_cache.rs
src-tauri/src/infrastructure/: db.rs
src-tauri/src/infrastructure/repositories/: article.rs  credential.rs  mod.rs  theme.rs  upload_cache.rs
src/csstree/: handler.js
src/lib/: appState.svelte.ts  articleStore.ts  bridgeFsAdapter.ts  db.ts  editorHandler.ts  imageProcessor.svelte.ts  imageProxy.ts  setHooks.ts  storeRegister.ts  tauriFsAdapter.ts  utils.ts
src/lib/bridge/: article.ts  credential.ts  events.ts  publish.ts  system.ts  theme.ts  update.ts  upload.ts  upload_cache.ts
src/lib/components/: AboutPage.svelte  FileSidebar.svelte  FileTreeItem.svelte  TitleBar.svelte
src/lib/services/: editorHandler.ts  exportHandler.ts  fileOpenHandler.ts  fileOpenListener.ts  imageProxy.ts  imageUploadService.ts  markdownContentHandler.ts  processImages.svelte.ts  publishHandler.ts  updateService.ts  wechatHandler.ts
src/lib/stores/: credentialStore.ts  db.ts  sqliteArticleStore.ts  sqliteCredentialStore.ts  sqliteThemeStore.ts  sqliteUploadCacheStore.ts
src/micromodal/: micromodal.css
src/routes/: +page.svelte  layout.css
src/routes/about/: +page.svelte
src/themes/: lapis.css  maize.css  orangeheart.css  phycat.css  pie.css  purple.css
