[package]
name = "wenyan"
version = "0.1.0" # not used
description = "多平台写作，一键排版美化"
authors = ["caol64@gmail.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "=2.5.5", features = [] }

[dependencies]
tauri = { version = "=2.10.1", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md5 = "0.8"
tokio = { version = "1", features = ["sync"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-os = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-opener = "2"
log = "0.4"
tauri-utils = "2"
tauri-runtime = "2"
tauri-runtime-wry = "2"
tauri-macros = "2"
thiserror = "2.0.18"
chrono = "0.4.44"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
mime_guess = "2.0.5"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
lto = true
# opt-level = "s" # z or s
strip = true
